--- a/css/queries.css
+++ b/css/queries.css
@@ -230,6 +230,10 @@
         border-radius: 0;
     }
 
+    #overview .img-wrap {
+        border-radius: 0;
+    }
+
     #map-content-wrapper {
         margin-bottom: 40px;
     }
@@ -258,6 +262,14 @@
     }
 
     #eng-pics .img-wrap i {
+        font-size: 25px;
+        position: absolute;
+        width: 25px;
+        height: 25px;
+        top: 10px;
+        right: 10px; }
+
+    #overview .img-wrap i {
         font-size: 25px;
         position: absolute;
         width: 25px;
